<resources>
    <string name="app_name">牛B的手机卫士</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="ok">确定</string>
    <string name="quit">取消</string>
    <string name="passwordtip1">请确认密码</string>
    <string name="passwordtip">请输入密码</string>
    <string name="titleSetPassword">设置密码</string>
    <string name="titleInputPassword">输入密码</string>
    <string name="title_activity_mobile_safe_wizard1">MobileSafeWizard1Activity</string>
    <string name="title_activity_mobile_safe_wizard2">MobileSafeWizard2Activity</string>
    <string name="title_activity_mobile_safe_wizard3">MobileSafeWizard3Activity</string>
    <string name="title_activity_mobile_safe_wizard4">MobileSafeWizard4Activity</string>
    <string name="title_activity_mobile_safe">MobileSafeActivity</string>
    <string name="title_activity_tool">ToolActivity</string>
    <string name="title_activity_phone_address">PhoneAddressActivity</string>
    <string name="title_activity_toast_loaction_setup">ToastLoactionSetupActivity</string>
</resources>
