<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/ActivityTitle"
        android:text="@string/titleSetPassword"/>

    <EditText
        android:id="@+id/tv_view_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordtip"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <EditText
        android:id="@+id/tv_view_password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/passwordtip1"
        android:inputType="textPassword"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_view_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/ok" />

        <Button
            android:id="@+id/btn_view_quit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:text="@string/quit" />

    </LinearLayout>

</LinearLayout>